--- a/index.css
+++ b/index.css
@@ -1,23 +1,137 @@
 *{
+   font-family: "Julee", serif;
+}
+body{
    margin: 0px auto;
 }
 body{
-   background: linear-gradient(180deg, green, #006400, green);
-   background-image: url(assets/images/IMG_20210423_005142_133.jpg);
+   /* background: linear-gradient(180deg, green, #006400, green);*/
+   background-image: url(assets/images/bg.jpg); 
+   /* background: #045B39; */
    background-attachment: fixed;
+   background-repeat: no-repeat;
+   background-position: bottom;
+   background-size: cover;
 }
-.all-bg{
-   
+.all-bg{   
    display: flex;
    flex-direction: column;
-   justify-content: space-between;
-   align-content: space-between ;
+   justify-content: center;
+   align-items: center ;
+   height: 100vh;
 }
+.header{
+   width: 100%;
+   box-sizing: border-box;
+}
+.header .head-box{
+   background: white;
+   padding: 5px 10px;
+}
+.header .img-box{
+   width: 30px;
+}
+.img-box img{
+   width: 100%;
+}
+.header .intro{
+   text-align: center;   
+   h1{
+      font-family: "Merienda", serif;
+      font-weight: 900;
+      font-size: 35px;
+      margin: 2px 0px;
+      color: #cdcdcd;
+   }
+   p{
+      font-family: "Merienda", serif;
+      margin: 2px 0px;
+      color: #cdcdcd;
+   }
+}
+
 .chat-box{
-  background: rgba(255, 255, 255, 0.2);
-  height: 500px;
-  width: 70%;
+   margin: 0px auto;
+  background: rgba(255, 255, 255, 0);
+  height: 70%;
+  max-height: fit-content;
+  width: 60%;
   padding: 15px;
   border-radius: 15px;
-  backdrop-filter: blur(20px);
+  backdrop-filter: blur(8px);
+  border: 1px solid gray;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.chat-box .message-box{
+   height: 100%;
+   max-height: fit-content;
+   width: 100%;
+   overflow-y: scroll;
+   scrollbar-width: none;
+}
+.message-box>div{
+   padding: 8px;
+   margin-top: 3px;
+   margin-bottom: 15px;
+   background: rgba(255, 255, 255, 0.075);
+   backdrop-filter: blur(8px);
+   width: 50%;
+   max-width: fit-content;
+   border-radius: 5px;
+}
+.message-box>div p{
+   margin: 0px;
+   color: white;
+}
+.message-box .user-message-box{
+   margin-left: auto;
+}
+.chat-box .type-box{
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   align-items: center;
+   background: #303030;
+   width: 100%;
+   box-sizing: border-box;
+   padding: 10px;
+   border-radius: 10px;
+}
+.type-box textarea{
+   width: 100%;
+   /* height: 100px; */
+   max-height: 50px;
+   overflow: auto;
+   scrollbar-width: thin;
+   resize: none;
+   border: none;
+   outline: none;
+   padding: 5px;
+   background: transparent;
+   color: white;
+}
+textarea::placeholder{
+   color: whitesmoke;
+}
+.type-box i{
+   background: whitesmoke;
+   padding: 10px;
+   border-radius: 100%;
+   color: #303030;
+   margin: 0px 2px;
+   cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+   .chat-box{
+      width: 100%;
+      box-sizing: border-box;
+   }
+   .message-box>div{
+      width: 75%;
+   }
 }
