--- a/index.css
+++ b/index.css
@@ -127,6 +127,10 @@ textarea::placeholder{
 }
 
 @media screen and (max-width: 768px) {
+   .all-bg{
+      justify-content: space-between;
+      align-items: center ;
+   }
    .chat-box{
       width: 100%;
       box-sizing: border-box;
