--- a/index.css
+++ b/index.css
@@ -18,7 +18,8 @@ body{
    flex-direction: column;
    justify-content: center;
    align-items: center ;
-   height: 100vh;
+   height: 90vh;
+   padding: 5px 0px;
 }
 .header{
    width: 100%;
@@ -71,12 +72,12 @@ body{
    max-height: fit-content;
    width: 100%;
    overflow-y: scroll;
-   scrollbar-width: none;
+   scrollbar-width: thin;
 }
 .message-box>div{
    padding: 8px;
    margin-top: 3px;
-   margin-bottom: 15px;
+   margin-bottom: 9px;
    background: rgba(255, 255, 255, 0.075);
    backdrop-filter: blur(8px);
    width: 50%;
