--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ body{
    max-height: fit-content;
    width: 100%;
    overflow-y: scroll;
-   scrollbar-width: thin;
+   scrollbar-width: none;
 }
 .message-box>div{
    padding: 8px;
