--- a/index.css
+++ b/index.css
@@ -134,6 +134,7 @@ textarea::placeholder{
    }
    .chat-box{
       width: 100%;
+      height: 80%;
       box-sizing: border-box;
    }
    .message-box>div{
